--- a/config/test_config.yaml
+++ b/config/test_config.yaml
@@ -15,7 +15,7 @@ flow:
   inflow_velocity: [8., 0.] # [u, v] m.s^-1
   kinematic_viscosity: 0.000015 # kg.m^-1.s^-1
   tuning_viscosity: 1. # kg.m^-1.s^-1
-  mixing_length: 10. #30. #20 # m
+  mixing_length: 20. #30. #20 # m
   density: 1.2 # kg.m^-3
 
 wind_farm:
@@ -37,8 +37,8 @@ wind_farm:
 #    time_advance: 30. #s
 #    regularisation_alpha: 0.5
 #    time_start_control: 10.
-#    type: fixed
-    type: series
+    type: fixed
+#    type: series
 
 turbine:
   axial_induction: 0.33
