--- a/config/test_config.yaml
+++ b/config/test_config.yaml
@@ -35,6 +35,7 @@ wind_farm:
 #    yaw_series: # [time, yaw_0, ... , yaw_n]
 #      - [0., 0.3, 0.,]
 #      - [59., -0.3, 0.,]
+    control_discretisation: 10.
 
 turbine:
   axial_induction: 0.33
