--- a/config/test_config_rotating.yaml
+++ b/config/test_config_rotating.yaml
@@ -2,32 +2,38 @@
 # DTU10MWRef
 
 simulation:
-  name: two_turbine_test_steady
-  is_dynamic: False  # steady state model
-#  total_time: 59. # s
-#  time_step: 0.5 # s
+  name: two_turbine_test_rotating
+  is_dynamic: True
+  total_time: 300. # s
+  time_step: 0.5 # s
   dimensions: 2 # -
   save_logs: True
-#  write_time_step: 10.0
+  write_time_step: 10.0
 
 flow:
-  inflow_velocity: [8., 0.] # [u, v] m.s^-1
+#  type: steady
+#  inflow_velocity: [8., 225.] # [|U|, theta]  -x-[u, v] m.s^-1-x-
+  type: series
+  inflow_velocity_series: # [t, |U|, theta]
+    - [0,   8., 315]
+    - [300., 8., 225]
+    - [600., 8., 180]
   kinematic_viscosity: 0.000015 # kg.m^-1.s^-1
   tuning_viscosity: 1. # kg.m^-1.s^-1
-  mixing_length: 50. #30. #20 # m
+  mixing_length: 20. #30. #20 # m
   density: 1.2 # kg.m^-3
 
 wind_farm:
   size: [2000,1000]
-  cells: [40, 20]
-  do_refine_turbines: 1
+  cells: [20, 10]
+  do_refine_turbines: True
   refine_radius: 100.
   positions: # [x, y] m
     - [400,500]
     - [1300,500]
   yaw_angles: # [gamma] rad
-    - 0.3
-    - -0.2
+    - 0.1
+    - 0.0
 
   farm_controller:
     type: fixed
