Fix new inflow definition for steady-state flow optimisation

--- a/config/test_config_steady.yaml
+++ b/config/test_config_steady.yaml
@@ -11,10 +11,11 @@ simulation:
 #  write_time_step: 10.0
 
 flow:
-  inflow_velocity: [8., 0.] # [u, v] m.s^-1
+  type: "steady"
+  inflow_velocity: [8., 270.] #[|U|, theta]  [u, v] m.s^-1
   kinematic_viscosity: 0.000015 # kg.m^-1.s^-1
   tuning_viscosity: 1. # kg.m^-1.s^-1
-  mixing_length: 50. #30. #20 # m
+  mixing_length: 20. #30. #20 # m
   density: 1.2 # kg.m^-3
 
 wind_farm:
