--- a/config/test_config.yaml
+++ b/config/test_config.yaml
@@ -11,7 +11,8 @@ simulation:
   write_time_step: 10.0
 
 flow:
-  inflow_velocity: [8., 0.] # [u, v] m.s^-1
+  type: "steady"
+  inflow_velocity: [8., 270.]  # [|U|, theta]
   kinematic_viscosity: 0.000015 # kg.m^-1.s^-1
   tuning_viscosity: 1. # kg.m^-1.s^-1
   mixing_length: 20. #30. #20 # m
