--- a/config/test_config.yaml
+++ b/config/test_config.yaml
@@ -23,6 +23,7 @@ flow:
   wake_mixing_offset: 3.0 # D
   wake_mixing_ml_max: 25. # m
   density: 1.2 # kg.m^-3
+  continuity_correction: wfsim # none, wfsim, (general)
 
 wind_farm:
   size: [2000,1000]
