--- a/config/one.ssc.sim.yaml
+++ b/config/one.ssc.sim.yaml
@@ -1,7 +1,7 @@
 mode: simulation
 
 simulation:
-  name: two.ssc.sim
+  name: one.ssc.sim
   is_dynamic: True
   total_time: 599. # s
   time_step: 1. # s
@@ -23,19 +23,17 @@ flow:
   continuity_correction: wfsim # none, wfsim, (general)
 
 wind_farm:
-  size: [2000,1000]
-  cells: [20, 10]
+  size: [1000,1000]
+  cells: [10, 10]
   do_refine_turbines: 1
   refine_radius: 100.
   positions: # [x, y] m
     - [400,500]
-    - [1300,500]
   yaw_angles: # [gamma] deg
-    - 270.
     - 270.
   farm_controller:
     type: external
-    port: 1651
+    port: 1638
     control_discretisation: 1.
 
 turbine:
