--- a/config/two.ssc.ctrl.yaml
+++ b/config/two.ssc.ctrl.yaml
@@ -1,7 +1,7 @@
 mode: supercontroller
 
 ssc:
-  port: 1649
+  port: 1651
   control_discretisation: 1.
 #  type: fixed
   yaw_angles:
@@ -12,8 +12,8 @@ ssc:
 #      - [0., 290, 270.]
 #      - [59., 250, 270.]
   type: gradient_step
-  prediction_horizon: 240
-  control_horizon: 30.
+  prediction_horizon: 150.
+  control_horizon: 1.
   objective: tracking
   power_reference:  #MW
     - [  0., 6.1]
@@ -30,7 +30,7 @@ simulation:
 
 flow:
   type: "steady"
-  inflow_velocity: [8., 270.]  # [|U|, theta]
+  inflow_velocity: [9., 270.]  # [|U|, theta]
   kinematic_viscosity: 0.000015 # kg.m^-1.s^-1
   tuning_viscosity: 0. # kg.m^-1.s^-1
   mixing_length: 10. #30. #20 # m
