--- a/config/one.ssc.ctrl.yaml
+++ b/config/one.ssc.ctrl.yaml
@@ -9,6 +9,7 @@ ssc:
   prediction_horizon: 10.
   control_horizon: 1.
   objective: tracking
+#  objective: maximisation
   power_reference:  #MW
     - [  0., 6.1]
     - [999., 7.1]
