Add transient time period for ssc start-up to config

--- a/config/one.ssc.sim.yaml
+++ b/config/one.ssc.sim.yaml
@@ -39,7 +39,7 @@ wind_farm:
 turbine:
   axial_induction: 0.33
   diameter: 178.4 # m
-  thickness: 17.8 # m
+  thickness: 25. # m
   hub_height: 119.6 # m
   kernel: gaussian # king, gaussian
   deflection_scale: 3. #
