--- a/config/one.ssc.ctrl.yaml
+++ b/config/one.ssc.ctrl.yaml
@@ -8,8 +8,9 @@ ssc:
   type: gradient_step
   prediction_horizon: 10.
   control_horizon: 1.
-  objective: tracking
-#  objective: maximisation
+  transient_time: 20.
+#  objective: tracking
+  objective: maximisation
   power_reference:  #MW
     - [  0., 6.1]
     - [999., 7.1]
@@ -52,12 +53,12 @@ wind_farm:
     type: series
     yaw_series:
       - [0, 290.]
-      - [0, 270.]
+      - [10, 270.]
 
 turbine:
   axial_induction: 0.33
   diameter: 178.4 # m
-  thickness: 17.8 # m
+  thickness: 25. # m
   hub_height: 119.6 # m
   kernel: gaussian # king, gaussian
   deflection_scale: 3. #
