--- a/config/one.ssc.ctrl.yaml
+++ b/config/one.ssc.ctrl.yaml
@@ -6,14 +6,16 @@ ssc:
   yaw_angles:
     - 290.
   type: gradient_step
-  prediction_horizon: 10.
+  prediction_horizon: 30.
   control_horizon: 1.
   transient_time: 20.
-#  objective: tracking
-  objective: maximisation
+  objective: tracking
+#  objective: maximisation
   power_reference:  #MW
     - [  0., 6.1]
     - [999., 7.1]
+  control_signal: absolute
+#  control_signal: relative
 
 simulation:
   name: one.ssc.ctrl
@@ -62,3 +64,4 @@ turbine:
   hub_height: 119.6 # m
   kernel: gaussian # king, gaussian
   deflection_scale: 3. #
+  yaw_rate_limit: 0.3
