--- a/config/one.ssc.ctrl.yaml
+++ b/config/one.ssc.ctrl.yaml
@@ -52,7 +52,7 @@ wind_farm:
   farm_controller:
 #    type: fixed
     control_discretisation: 1.
-    type: series
+    yaw_control_type: series
     yaw_series:
       - [0, 290.]
       - [10, 270.]
