--- a/config/one.02.sweep.induction.yaml
+++ b/config/one.02.sweep.induction.yaml
@@ -35,13 +35,13 @@ wind_farm:
 #    - 270.
   farm_controller:
     yaw_control_type: fixed
-    control_discretisation: 30.
+    control_discretisation: 60.
     axial_induction_control_type: series
     axial_induction_series:
       - [0., 0.33]
       - [59., 0.33]
       - [59.3, 0.]
-      - [1200.,1.]
+      - [1200., 0.5]
 #    yaw_series:
 #      - [0., 290.]
 ##      - [59., 270.]
@@ -53,6 +53,6 @@ turbine:
   diameter: 178.4 # m
   thickness: 25. # m
   hub_height: 119.6 # m
-  kernel: gaussian # king, gaussian
+  kernel: king # king, gaussian
   deflection_scale: 3. #
   yaw_rate_limit: 0.3 # deg.s^-1
