--- a/config/one.ssc.sim.yaml
+++ b/config/one.ssc.sim.yaml
@@ -10,8 +10,15 @@ simulation:
   write_time_step: 10.0
 
 flow:
-  type: "steady"
-  inflow_velocity: [9., 270.]  # [|U|, theta]
+  #  type: "steady"
+  #  inflow_velocity: [9., 270.]  # [|U|, theta]
+  type: series
+  inflow_velocity_series: # [t, |U|, theta]
+    - [0,   9., 270]
+    - [60., 9., 290]
+    - [180., 9., 250]
+    - [300., 9., 290]
+    - [400., 9., 250]
   kinematic_viscosity: 0.000015 # kg.m^-1.s^-1
   tuning_viscosity: 0. # kg.m^-1.s^-1
   mixing_length: 10. #30. #20 # m
