Implement basic cp ct lookup in turbine

--- a/config/one.00.steady.yaml
+++ b/config/one.00.steady.yaml
@@ -55,5 +55,5 @@ turbine:
   kernel: gaussian # king, gaussian
   deflection_scale: 3. #
   # type of coefficient calculation method [induction; lut]
-  coefficients: induction
-#  coefficients: lut
+#  coefficients: induction
+  coefficients: lut
