--- a/config/one.00.steady.yaml
+++ b/config/one.00.steady.yaml
@@ -49,7 +49,11 @@ wind_farm:
     pitch_series:
       - [0., 0.]
       - [120.,20.]
-    torque_control_type: fixed
+#    torque_control_type: fixed
+    torque_control_type: series
+    torque_series:
+      - [0., 5.]
+      - [120., 10.]
 
 turbine:
   axial_induction: 0.33
