--- a/config/one.ssc.ctrl.bq.yaml
+++ b/config/one.ssc.ctrl.bq.yaml
@@ -5,34 +5,34 @@ ssc:
   control_discretisation: 1.
   yaw_angles:
     - 270.
-  type: series
+#  type: series
 #  mode: induction
   mode: pitch_torque
-  yaw_series:
-    - [0., 290.]
-    - [300., 250]
-    - [600., 290]
-  pitch_series:
-    - [0., 0.]
-    - [300., 10.]
-    - [600., 0.]
-  torque_series:
-    - [0., 6.]
-    - [300., 10.]
-    - [600., 6.]
+#  yaw_series:
+#    - [0., 290.]
+#    - [300., 250]
+#    - [600., 290]
+#  pitch_series:
+#    - [0., 0.]
+#    - [300., 10.]
+#    - [600., 0.]
+#  torque_series:
+#    - [0., 6.]
+#    - [300., 10.]
+#    - [600., 6.]
 #  axial_induction_series:
 #    - [0., 0.1]
 #    - [300., 0.4]
 #    - [600., 0.1]
-#  type: gradient_step
-#  prediction_horizon: 10.
-#  control_horizon: 1.
-#  transient_time: -1.
-##  objective: tracking
+  type: gradient_step
+  prediction_horizon: 10.
+  control_horizon: 1.
+  transient_time: 20.
+  objective: tracking
 #  objective: maximisation
-#  power_reference:  #MW
-#    - [  0., 6.1]
-#    - [999., 7.1]
+  power_reference:  #MW
+    - [  0., 6.1]
+    - [999., 7.1]
   control_signal: absolute
 #  control_signal: relative
 
@@ -84,14 +84,17 @@ wind_farm:
       - [0, 270.]
       - [10, 270.]
     axial_induction_control_type: none
+#    axial_induction_series:
+#      - [0., 0.33]
+#      - [0., 0.33]
     pitch_control_type: series
     pitch_series:
       - [0., 5.]
-      - [0., 5.]
+      - [1., 5.]
     torque_control_type: series
+    torque_series:
       - [0., 8.]
-      - [0., 8.]
-
+      - [1., 8.]
 
 turbine:
   axial_induction: 0.33
@@ -101,6 +104,7 @@ turbine:
   kernel: gaussian # king, gaussian
   deflection_scale: 3. #
   yaw_rate_limit: 0.3
+#  coefficients: induction
   coefficients: lut
   pitch: 0.
   torque: 8.
