--- a/config/two.ssc.ctrl.bq.yaml
+++ b/config/two.ssc.ctrl.bq.yaml
@@ -3,6 +3,7 @@ mode: supercontroller
 ssc:
   port: 1652
   control_discretisation: 1.
+  mode: pitch_torque # [induction; pitch_torque]
 #  type: fixed
   yaw_angles:
     - 290.
@@ -11,12 +12,11 @@ ssc:
 #  yaw_series:
 #      - [0., 290, 270.]
 #      - [59., 250, 270.]
-  type: gradient_step
+  type: gradient_step # [fixed; series; gradient_step]
   prediction_horizon: 20.
   control_horizon: 1.
   transient_time: 120.
-  objective: tracking
-#  objective: maximisation
+  objective: tracking # [tracking; maximisation]
   power_reference:  #MW
     - [  0., 6.1]
     - [999., 7.1]
@@ -62,6 +62,7 @@ wind_farm:
     yaw_series:
       - [0, 290., 270.]
       - [0, 270., 270.]
+    axial_inductioN_control_type: none
     pitch_control_type: series
     pitch_series:
       - [0., 0., 0.]
