--- a/config/one.02.steady.yaml
+++ b/config/one.02.steady.yaml
@@ -3,7 +3,7 @@ mode: simulation
 simulation:
   name: one.00.steady
   is_dynamic: True
-  total_time: 600. # s
+  total_time: 120. # s
   time_step: 1. # s
   dimensions: 2 # -
   save_logs: True
@@ -11,7 +11,7 @@ simulation:
 
 flow:
   type: "steady"
-  inflow_velocity: [9., 270.]  # [|U|, theta]
+  inflow_velocity: [8., 270.]  # [|U|, theta]
 #  type: "series"
 #  inflow_velocity_series: # [t, |U|, theta]
 #    - [0,   9., 270]
@@ -27,40 +27,39 @@ flow:
   wake_mixing_ml_max: 25. # m
   density: 1.2 # kg.m^-3
   continuity_correction: wfsim # none, wfsim, (general)
-  finite_element: MINI
 
 wind_farm:
   size: [2000,1000]
-  cells: [40,20]
+  cells: [20, 10]
   do_refine_turbines: 1
   refine_radius: 100.
   positions: # [x, y] m
     - [400,500]
-    - [1300,500]
+#    - [1300,500]
   yaw_angles: # [gamma] deg
-    - 290.
     - 270.
+#    - 270.
   farm_controller:
     control_discretisation: 1.
     yaw_control_type: series
     yaw_series:
-      - [0, 290, 270.]
-      - [10, 290., 270.]
+      - [0, 270.]
+      - [10, 270.]
     axial_induction_control_type: series
     axial_induction_series:
-      - [0., 0.33, 0.33]
-      - [1., 0.33, 0.33]
+      - [0., 0.33]
+      - [1., 0.33]
     # if turbine:coefficients:lut, then need pitch and torque control
-    pitch_control_type: fixed
-#    pitch_control_type: series
-#    pitch_series:
-#      - [0., 0.]
-#      - [120.,0.]
-    torque_control_type: fixed
-#    torque_control_type: series
-#    torque_series:
-#      - [0., 1000.]
-#      - [120., 1000.]
+#    pitch_control_type: fixed
+    pitch_control_type: series
+    pitch_series:
+      - [0., 0.]
+      - [120.,20.]
+#    torque_control_type: fixed
+    torque_control_type: series
+    torque_series:
+      - [0., 1000.]
+      - [120., 1000.]
 
 turbine:
   axial_induction: 0.33
