--- a/config/two.ssc.ctrl.a.yaml
+++ b/config/two.ssc.ctrl.a.yaml
@@ -7,19 +7,20 @@ ssc:
   yaw_angles:
     - 290.
     - 270.
-#  type: series
-#  yaw_series:
-#      - [0., 290, 270.]
-#      - [59., 250, 270.]
-  type: gradient_step
-  prediction_horizon: 20.
-  control_horizon: 1.
-  transient_time: 120.
-  objective: tracking
-#  objective: maximisation
-  power_reference:  #MW
-    - [  0., 6.1]
-    - [999., 7.1]
+  type: series
+  yaw_series:
+      - [0., 290, 270.]
+      - [59., 250, 270.]
+      - [119., 250, 290.]
+#  type: gradient_step
+#  prediction_horizon: 20.
+#  control_horizon: 1.
+#  transient_time: 120.
+#  objective: tracking
+##  objective: maximisation
+#  power_reference:  #MW
+#    - [  0., 6.1]
+#    - [999., 7.1]
 
 simulation:
   name: two.ssc.ctrl
